# kaizoku-cli

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
kaizoku/: __main__.py
kaizoku/core/: __init__.py  anime.py
kaizoku/providers/: __init__.py  animefire.py  common.py
kaizoku/scraping/: __init__.py  search_manager.py
kaizoku/ui/: kaizoku_app.py
kaizoku/ui/screens/: __init__.py  anime_screen.py  episodes_screen.py
kaizoku/ui/widgets/: __init__.py
kaizoku/ui/widgets/animes/: animes_search.py
kaizoku/ui/widgets/episodes/: episodes_info.py  episodes_table.py
providers/: animefire.py  animesdigital.py  common.py  exceptions.py
scraper/: search_manager.py
ui/: kaizoku_app.py
ui/screens/: anime_screen.py  episodes_screen.py
ui/widgets/: __init__.py
ui/widgets/animes/: animes_table.py
ui/widgets/animes_searching/: animeslist.py
ui/widgets/episodes/: episodes_info.py  episodes_table.py
utils/: config.py
