[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaizoku"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "textual",
]

[project.scripts]
kaizoku = "kaizoku.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["kaizoku"]
